2004-02-11  Jordi Mallach  <jordi@sindominio.net>
	* ca.po: Updated Catalan translation by
	Xavier Conde Rueda <xaviconde@eresmas.com>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12346 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-11  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Xavier Conde Rueda <xaviconde@eresmas.com>.
+
 2004-02-10  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
@@ -15,12 +20,12 @@
 
 	* hr.po: Updated Croatian translation.
 
-2003-02-05  Jordi Mallach  <jordi@sindominio.net>
+2004-02-05  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
 	Xavier Conde Rueda <xaviconde@eresmas.com>.
 
-2003-01-27  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
+2004-01-27  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
 
