2004-02-11  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-ins.c (plug_ins_init)
	* app/plug-in/plug-in.c (plug_in_close): changed g_warning() to
	g_printerr() in a few places where the problem is not an error in
	GIMP but a misbehaving plug-in. Suppress some of this output in
	the stable branch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12347 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-11  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/plug-ins.c (plug_ins_init)
+	* app/plug-in/plug-in.c (plug_in_close): changed g_warning() to
+	g_printerr() in a few places where the problem is not an error in
+	GIMP but a misbehaving plug-in. Suppress some of this output in
+	the stable branch.
+
 2004-02-10  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/preferences-dialog.c (prefs_dialog_new): removed "Default"
