--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-11  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptexttool.c: repaired broken text tool logic
+	(bug #124969).
+
+2004-02-11  Sven Neumann  <sven@gimp.org>
+
 	* app/plug-in/plug-ins.c (plug_ins_init)
 	* app/plug-in/plug-in.c (plug_in_close): changed g_warning() to
 	g_printerr() in a few places where the problem is not an error in
