2004-02-11  Sven Neumann  <sven@gimp.org>
	* configure.in (GIMP_DESKTOP_ICON): fixed icon names.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12349 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-11  Sven Neumann  <sven@gimp.org>
 
+	* configure.in (GIMP_DESKTOP_ICON): fixed icon names.
+
+2004-02-11  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptexttool.c: repaired broken text tool logic
 	(bug #124969).
 
