2004-02-12  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.[ch]: derive the text tool from GimpTool
	directly. Doesn't look like we are going to use draw_tool
	functionality for 2.0.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12351 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-12  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.[ch]: derive the text tool from GimpTool
+	directly. Doesn't look like we are going to use draw_tool
+	functionality for 2.0.
+
 2004-02-11  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-dnd.c
