2004-02-12  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphistogramview.c (gimp_histogram_view_button_press):
	ignore double clicks so we don't grab the pointer away from the
	curves dialog. Fixes bug #132356.

	* app/tools/gimpcurvestool.c (curves_graph_events): ignore button
	press and release events from all buttons except the first one.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12353 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-02-12  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimphistogramview.c (gimp_histogram_view_button_press):
+	ignore double clicks so we don't grab the pointer away from the
+	curves dialog. Fixes bug #132356.
+
+	* app/tools/gimpcurvestool.c (curves_graph_events): ignore button
+	press and release events from all buttons except the first one.
+
+2004-02-12  Michael Natterer  <mitch@gimp.org>
+
 	Make sure that non-indexed images never have a colormap.
 	Fixes bug #121033.
 
