2004-02-12  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpimage-convert.c (gimp_image_convert): call
	gimp_image_colormap_changed() after installing the colormap.

	* app/tools/gimphistogramoptions.h: fixed typedef of
	GimpHistogramOptionsClass.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12354 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-02-12  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpimage-convert.c (gimp_image_convert): call
+	gimp_image_colormap_changed() after installing the colormap.
+
+	* app/tools/gimphistogramoptions.h: fixed typedef of
+	GimpHistogramOptionsClass.
+
+2004-02-12  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimphistogramview.c (gimp_histogram_view_button_press):
 	ignore double clicks so we don't grab the pointer away from the
 	curves dialog. Fixes bug #132356.
