*  2004-02-12 / v3.0.14 / Adam D. Moss  *       Fix a twisted utf8-obsessive bug diagnosed by  *       Piotr Krysiuk <KrysiukP@prokom.pl>  *  *  2004-01-06 / v3.0.13 / Adam D. Moss  *       Disable one of the PanoTools fixes by default, since it causes  *       regressions in some ordinary PSD file loading.  *  *  2004-01-06 / v3.0.12 / Adam D. Moss  *       Try to avoid 0-sized drawables (including channels) in all  *       circumstances under GIMP 2.  *  *  2004-01-01 / v3.0.11 / Daniel Rogers <dsrogers@phaseveloctiy.org>  *       GIMP crashes on 0x0 layers, so we skip them.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12355 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-12  Adam D. Moss  <adam@gimp.org>
+
+	* plug-ins/common/psd.c:
+	- Disable one of the PanoTools fixes by default, since it causes
+          regressions in some ordinary PSD file loading.
+	- Fix a twisted utf8-obsessive bug diagnosed by Piotr Krysiuk
+	- Fix another one...
+	- Fix from Daniel Rogers: GIMP crashes on 0x0 layers, so we skip them.
+	- Also try to avoid 0-sized drawables (including channels)
+
 2004-02-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-convert.c (gimp_image_convert): call
