2004-02-12  Sven Neumann  <sven@gimp.org>
	* app/display/gimpcanvas.c (gimp_canvas_gc_new): use
	GDK_CAP_NOT_LAST as the cap_style for all canvas drawing.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12356 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-12  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpcanvas.c (gimp_canvas_gc_new): use
+	GDK_CAP_NOT_LAST as the cap_style for all canvas drawing.
+
 2004-02-12  Adam D. Moss  <adam@gimp.org>
 
 	* plug-ins/common/psd.c:
